# nes-emulator

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: rust.yml
src/: cpu.rs  lib.rs  main.rs  utils.rs
src/bus/: mod.rs
src/cpu/: mod.rs  op.rs  opcode.rs  opcode_table.rs
src/cpu/opcode/: arithmetic.rs  branches.rs  combined_ops.rs  increment_decrements.rs  jumps.rs  load_store.rs  logical.rs  mod.rs  opcode_table.rs  register_transfers.rs  rmw.rs  shifts.rs  stack_operations.rs  status_flag_changes.rs  system_functions.rs
src/mem/: bus.rs  memory.rs  mod.rs  rom.rs
src/ppu/: mod.rs  register.rs
src/ppu/register/: control_reg.rs  mod.rs  oam_address.rs  ppu_address.rs  scroll.rs
