[package]
name = "nes-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
rand = "0.9.1"
sdl2 = { version = "0.37.0", optional = true, features = [
] }

[[bin]]
name = "snake-binary"
required-features = ["sdl2"]

[[bin]]
name = "snake-nes"
required-features = ["sdl2"]

[[bin]]
name = "chr-rom"
required-features = ["sdl2"]

[features]
sdl2 = ["dep:sdl2"]
